Tweaked some seo things, fixed spacing for no specializations

--- a/src/app/components/dumb/character-viewer/character-viewer.less
+++ b/src/app/components/dumb/character-viewer/character-viewer.less
@@ -8,6 +8,10 @@ character-viewer {
 	max-width: 820px;
 }
 
+.emptySpecializationSpacer {
+	margin-top: 4em;
+}
+
 .topStrip {
 	padding: 0.5em;
 	text-align: center;
